chore: Update video player height and add footer

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </ul>
   </header>
   <main>
-    <iframe width="100%" height="315" src="https://www.youtube.com/embed/7xALolZzhSM?si=q4FhNq1adbWGF154&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="100%" height="600" src="https://www.youtube.com/embed/7xALolZzhSM?si=q4FhNq1adbWGF154&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <section class="sec-top-viewed">
       <h2>Lo Mas Visto</h2>
       <article class="top-viewed-posters">
@@ -35,6 +35,8 @@
       </article>
     </section>
   </main>
-  <footer></footer>
+  <footer>
+    <p>&copy; 2022 Netflix. All rights reserved.</p>
+  </footer>
 </body>
 </html>
